--- a/explore.html
+++ b/explore.html
@@ -37,6 +37,12 @@
       outline: 2px solid rgba(125, 211, 252, .9);
       outline-offset: 2px;
     }
+
+    /* Styles pour le pied de page (identiques à l'index) */
+    .siteFooter{margin-top:28px;padding:18px 12px;text-align:center;font-size:12px;opacity:.78}
+    .siteFooter .footerInner{display:flex;gap:10px;justify-content:center;align-items:center;flex-wrap:wrap}
+    .siteFooter a{color:inherit;text-decoration:none;border-bottom:1px dotted currentColor}
+    .siteFooter a:hover{opacity:1}
   </style>
 </head>
 
@@ -74,6 +80,15 @@
         <div id="toc" class="toc"></div>
       </aside>
     </main>
+
+    <footer class="siteFooter">
+        <div class="footerInner">
+            <span class="copy">Brahms – Tous droits réservés</span>
+            <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf40aIE11fnKasayyVr117DZL5A3uZZBCwLdkQ/viewform?usp=sf_link" target="_blank">
+                ✉️ Écrire à Brahms
+            </a>
+        </div>
+    </footer>
   </div>
 
   <div id="drawer" class="drawer" aria-hidden="true">
