--- a/type.html
+++ b/type.html
@@ -6,6 +6,14 @@
   <title>Fiche complète</title>
   <link rel="stylesheet" href="assets/css/app.css?v=12" />
   <link rel="stylesheet" href="assets/css/type.css?v=12" />
+
+  <style>
+    /* Styles pour le pied de page (identiques aux autres pages) */
+    .siteFooter{margin-top:28px;padding:18px 12px;text-align:center;font-size:12px;opacity:.78}
+    .siteFooter .footerInner{display:flex;gap:10px;justify-content:center;align-items:center;flex-wrap:wrap}
+    .siteFooter a{color:inherit;text-decoration:none;border-bottom:1px dotted currentColor}
+    .siteFooter a:hover{opacity:1}
+  </style>
 </head>
 <body>
   <div class="wrap typeWrap">
@@ -45,6 +53,15 @@
         <div id="toc" class="toc"></div>
       </aside>
     </main>
+
+    <footer class="siteFooter">
+        <div class="footerInner">
+            <span class="copy">Brahms – Tous droits réservés</span>
+            <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf40aIE11fnKasayyVr117DZL5A3uZZBCwLdkQ/viewform?usp=sf_link" target="_blank">
+                ✉️ Écrire à Brahms
+            </a>
+        </div>
+    </footer>
   </div>
 
   <div id="drawer" class="drawer" aria-hidden="true">
