--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ennéagramme</title>
     <link rel="stylesheet" href="assets/css/app.css?v=99" />
+    <style>
+      .siteFooter{margin:18px 0 10px;font-size:12px;opacity:.85}
+      .siteFooterInner{display:flex;gap:12px;justify-content:center;align-items:center;flex-wrap:wrap}
+      .siteFooterLink{text-decoration:none}
+      .siteFooterLink:hover{text-decoration:underline}
+    </style>
 </head>
 <body>
     <div class="wrap">
@@ -29,6 +35,7 @@
                             <marker id="arrowHeadPink" markerWidth="10" markerHeight="10" refX="9" refY="5" orient="auto" markerUnits="strokeWidth">
                                 <path d="M 0 0 L 10 5 L 0 10 z" fill="rgba(253,164,175,.95)"></path>
                             </marker>
+
                             <filter id="softGlow" x="-30%" y="-30%" width="160%" height="160%">
                                 <feGaussianBlur stdDeviation="2.2" result="blur" />
                                 <feMerge>
@@ -37,20 +44,25 @@
                                 </feMerge>
                             </filter>
                         </defs>
+
                         <circle class="ring" cx="350" cy="350" r="270"></circle>
                         <circle class="innerRing" cx="350" cy="350" r="210"></circle>
+
                         <g id="staticBg" class="staticBg">
                             <path class="hex" d="" id="hexPath"></path>
                             <path class="tri" d="" id="triPath"></path>
+
                             <g class="centers">
                                 <path class="centerLine" d="M350 350 L350 120"></path>
                                 <path class="centerLine" d="M350 350 L585 455"></path>
                                 <path class="centerLine" d="M350 350 L115 455"></path>
+
                                 <text class="centerLabel instinctif" x="350" y="255" text-anchor="middle">Instinctif</text>
                                 <text class="centerLabel emotionnel" x="468" y="415" text-anchor="middle">Émotionnel</text>
                                 <text class="centerLabel mental" x="232" y="415" text-anchor="middle">Mental</text>
                             </g>
                         </g>
+
                         <g id="arrowsLayer"></g>
                         <g id="nodesLayer"></g>
                     </svg>
@@ -64,22 +76,45 @@
 
                 <div class="card">
                     <div class="miniGrid">
-                        <div class="mini"><h3>Centre d'intelligence</h3><p id="center">-</p></div>
-                        <div class="mini"><h3>Peur de base</h3><p id="fear">-</p></div>
-                        <div class="mini"><h3>Désir de base</h3><p id="desire">-</p></div>
-                        <div class="mini"><h3>Compulsion (évitement)</h3><p id="compulsion">-</p></div>
+                        <div class="mini">
+                            <h3>Centre d'intelligence</h3>
+                            <p id="center">-</p>
+                        </div>
+                        <div class="mini">
+                            <h3>Peur de base</h3>
+                            <p id="fear">-</p>
+                        </div>
+                        <div class="mini">
+                            <h3>Désir de base</h3>
+                            <p id="desire">-</p>
+                        </div>
+                        <div class="mini">
+                            <h3>Compulsion (évitement)</h3>
+                            <p id="compulsion">-</p>
+                        </div>
                     </div>
 
                     <div class="moveLines">
                         <div id="moveHealth" class="moveLine">
                             <div class="moveHead">
-                                <span class="dot good"></span><strong>Intégration</strong> <span class="muted">(santé)</span><span class="muted"> > </span><strong id="toIntegr">-</strong><span class="muted">:</span>
+                                <span class="dot good"></span>
+                                <strong>Intégration</strong>
+                                <span class="muted">(santé)</span>
+                                <span class="muted"> > </span>
+                                <strong id="toIntegr">-</strong>
+                                <span class="muted">:</span>
                             </div>
                             <div class="moveBody" id="moveHealthText">-</div>
                         </div>
+
                         <div id="moveStress" class="moveLine">
                             <div class="moveHead">
-                                <span class="dot warn"></span><strong>Désintégration</strong> <span class="muted">(stress)</span><span class="muted"> > </span><strong id="toDisint">-</strong><span class="muted">:</span>
+                                <span class="dot warn"></span>
+                                <strong>Désintégration</strong>
+                                <span class="muted">(stress)</span>
+                                <span class="muted"> > </span>
+                                <strong id="toDisint">-</strong>
+                                <span class="muted">:</span>
                             </div>
                             <div class="moveBody" id="moveStressText">-</div>
                         </div>
@@ -94,21 +129,12 @@
         </main>
 
         <footer class="siteFooter">
-            <div class="footerInner">
-                <span class="copy">Brahms – Tous droits réservés</span>
-                <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf40aIE11fnKasayyVr117DZL5A3uZZBCwLdkQ/viewform?usp=sf_link" target="_blank">
-                    ✉️ Écrire à Brahms
-                </a>
-            </div>
+          <div class="siteFooterInner">
+            <span>Brahms — Tous droits réservés</span>
+            <a class="siteFooterLink" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=dialog" target="_blank" rel="noopener">✉️ Écrire à Brahms</a>
+          </div>
         </footer>
     </div>
-
-    <style>
-        .siteFooter{margin-top:28px;padding:18px 12px;text-align:center;font-size:12px;opacity:.78}
-        .siteFooter .footerInner{display:flex;gap:10px;justify-content:center;align-items:center;flex-wrap:wrap}
-        .siteFooter a{color:inherit;text-decoration:none;border-bottom:1px dotted currentColor}
-        .siteFooter a:hover{opacity:1}
-    </style>
 
     <script src="assets/js/app.js?v=99"></script>
 </body>
