--- a/explore.html
+++ b/explore.html
@@ -12,37 +12,16 @@
     .nodeValue{ white-space: pre-line; }
     .nodeCard{ white-space: normal; }
     .heroActions{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
-
     .heroBtn{
       display:inline-flex; align-items:center; gap:8px;
-      padding:10px 12px;
-      border-radius:12px;
+      padding:10px 12px; border-radius:12px; border:1px solid rgba(255,255,255,.12);
       text-decoration:none;
-      font-weight:600;
-
-      color: var(--text);
-      background: rgba(125, 211, 252, .16);
-      border: 1px solid rgba(125, 211, 252, .45);
     }
 
-    .heroBtn:visited{ color: var(--text); }
-
-    .heroBtn:hover{
-      background: rgba(125, 211, 252, .24);
-      border-color: rgba(125, 211, 252, .65);
-      transform: translateY(-1px);
-    }
-
-    .heroBtn:focus-visible{
-      outline: 2px solid rgba(125, 211, 252, .9);
-      outline-offset: 2px;
-    }
-
-    /* Styles pour le pied de page (identiques à l'index) */
-    .siteFooter{margin-top:28px;padding:18px 12px;text-align:center;font-size:12px;opacity:.78}
-    .siteFooter .footerInner{display:flex;gap:10px;justify-content:center;align-items:center;flex-wrap:wrap}
-    .siteFooter a{color:inherit;text-decoration:none;border-bottom:1px dotted currentColor}
-    .siteFooter a:hover{opacity:1}
+    .siteFooter{margin:18px 0 10px;font-size:12px;opacity:.85}
+    .siteFooterInner{display:flex;gap:12px;justify-content:center;align-items:center;flex-wrap:wrap}
+    .siteFooterLink{text-decoration:none}
+    .siteFooterLink:hover{text-decoration:underline}
   </style>
 </head>
 
@@ -82,12 +61,10 @@
     </main>
 
     <footer class="siteFooter">
-        <div class="footerInner">
-            <span class="copy">Brahms – Tous droits réservés</span>
-            <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf40aIE11fnKasayyVr117DZL5A3uZZBCwLdkQ/viewform?usp=sf_link" target="_blank">
-                ✉️ Écrire à Brahms
-            </a>
-        </div>
+      <div class="siteFooterInner">
+        <span>Brahms — Tous droits réservés</span>
+        <a class="siteFooterLink" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=dialog" target="_blank" rel="noopener">✉️ Écrire à Brahms</a>
+      </div>
     </footer>
   </div>
 
@@ -115,6 +92,6 @@
     </div>
   </div>
 
-  <script src="assets/js/explore.js?v=2"></script>
+  <script src="assets/js/explore.js?v=1"></script>
 </body>
 </html>
