--- a/explore.html
+++ b/explore.html
@@ -18,9 +18,10 @@
       text-decoration:none;
     }
 
-    .siteFooter{margin:18px 0 10px;font-size:12px;opacity:.85}
+    .siteFooter{margin:18px 0 10px;font-size:12px;opacity:.9}
     .siteFooterInner{display:flex;gap:12px;justify-content:center;align-items:center;flex-wrap:wrap}
-    .siteFooterLink{text-decoration:none}
+    .siteFooterLink{color:#fff;text-decoration:none}
+    .siteFooterLink:visited{color:#fff}
     .siteFooterLink:hover{text-decoration:underline}
   </style>
 </head>
@@ -62,8 +63,8 @@
 
     <footer class="siteFooter">
       <div class="siteFooterInner">
-        <span>Brahms — Tous droits réservés</span>
-        <a class="siteFooterLink" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=dialog" target="_blank" rel="noopener">✉️ Écrire à Brahms</a>
+        <span>Brams — Tous droits réservés</span>
+        <a class="siteFooterLink" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=dialog" target="_blank" rel="noopener">✉️ Écrire à Brams</a>
       </div>
     </footer>
   </div>
