--- a/type.html
+++ b/type.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="assets/css/type.css?v=12" />
 
   <style>
-    /* Styles pour le pied de page (identiques aux autres pages) */
-    .siteFooter{margin-top:28px;padding:18px 12px;text-align:center;font-size:12px;opacity:.78}
-    .siteFooter .footerInner{display:flex;gap:10px;justify-content:center;align-items:center;flex-wrap:wrap}
-    .siteFooter a{color:inherit;text-decoration:none;border-bottom:1px dotted currentColor}
-    .siteFooter a:hover{opacity:1}
+    .siteFooter{margin:18px 0 10px;font-size:12px;opacity:.9}
+    .siteFooterInner{display:flex;gap:12px;justify-content:center;align-items:center;flex-wrap:wrap}
+    .siteFooterLink{color:#fff;text-decoration:none}
+    .siteFooterLink:visited{color:#fff}
+    .siteFooterLink:hover{text-decoration:underline}
   </style>
 </head>
 <body>
@@ -55,12 +55,10 @@
     </main>
 
     <footer class="siteFooter">
-        <div class="footerInner">
-            <span class="copy">Brahms – Tous droits réservés</span>
-            <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf40aIE11fnKasayyVr117DZL5A3uZZBCwLdkQ/viewform?usp=sf_link" target="_blank">
-                ✉️ Écrire à Brahms
-            </a>
-        </div>
+      <div class="siteFooterInner">
+        <span>Brams — Tous droits réservés</span>
+        <a class="siteFooterLink" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=dialog" target="_blank" rel="noopener">✉️ Écrire à Brams</a>
+      </div>
     </footer>
   </div>
 
