--- a/explore.html
+++ b/explore.html
@@ -63,7 +63,7 @@
 
     <footer class="siteFooter">
       <div class="siteFooterInner">
-        <span>Brams — Tous droits réservés</span>
+        <span>Brahms — Tous droits réservés</span>
         <a class="siteFooterLink" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=dialog" target="_blank" rel="noopener">✉️ Écrire à Brams</a>
       </div>
     </footer>
