--- a/explore.html
+++ b/explore.html
@@ -36,8 +36,8 @@
         <p id="exploreSubtitle">Histoire, concepts, niveaux 1–9, pratiques, repères</p>
 
         <div class="heroActions">
-          <a class="heroBtn" href="test-enneagramme-sans-indice.html">Faire le test</a>
-          <a class="heroBtn" href="index.html">Aller au diagramme</a>
+          <a id="btnTest" class="softCta" href="test-enneagramme-sans-indice.html">Faire le test</a>
+          <a id="btnDiagram" class="softCta" href="index.html">Aller au diagramme</a>
         </div>
       </div>
 
@@ -64,7 +64,7 @@
     <footer class="siteFooter">
       <div class="siteFooterInner">
         <span>Brahms — Tous droits réservés</span>
-        <a class="siteFooterLink" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=dialog" target="_blank" rel="noopener">✉️ Écrire à Brams</a>
+        <a class="siteFooterLink" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=dialog" target="_blank" rel="noopener">✉️ Écrire à Brahms</a>
       </div>
     </footer>
   </div>
@@ -93,6 +93,6 @@
     </div>
   </div>
 
-  <script src="assets/js/explore.js?v=1"></script>
+  <script src="assets/js/explore.js?v=2"></script>
 </body>
 </html>
