--- a/explore.html
+++ b/explore.html
@@ -12,17 +12,37 @@
     .nodeValue{ white-space: pre-line; }
     .nodeCard{ white-space: normal; }
     .heroActions{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
+
     .heroBtn{
       display:inline-flex; align-items:center; gap:8px;
-      padding:10px 12px; border-radius:12px; border:1px solid rgba(255,255,255,.12);
+      padding:10px 12px;
+      border-radius:12px;
       text-decoration:none;
+      font-weight:600;
+
+      color: var(--text);
+      background: rgba(125, 211, 252, .16);
+      border: 1px solid rgba(125, 211, 252, .45);
     }
 
-    .siteFooter{margin:18px 0 10px;font-size:12px;opacity:.9}
-    .siteFooterInner{display:flex;gap:12px;justify-content:center;align-items:center;flex-wrap:wrap}
-    .siteFooterLink{color:#fff;text-decoration:none}
-    .siteFooterLink:visited{color:#fff}
-    .siteFooterLink:hover{text-decoration:underline}
+    .heroBtn:visited{ color: var(--text); }
+
+    .heroBtn:hover{
+      background: rgba(125, 211, 252, .24);
+      border-color: rgba(125, 211, 252, .65);
+      transform: translateY(-1px);
+    }
+
+    .heroBtn:focus-visible{
+      outline: 2px solid rgba(125, 211, 252, .9);
+      outline-offset: 2px;
+    }
+
+    /* Styles pour le pied de page (identiques à l'index) */
+    .siteFooter{margin-top:28px;padding:18px 12px;text-align:center;font-size:12px;opacity:.78}
+    .siteFooter .footerInner{display:flex;gap:10px;justify-content:center;align-items:center;flex-wrap:wrap}
+    .siteFooter a{color:inherit;text-decoration:none;border-bottom:1px dotted currentColor}
+    .siteFooter a:hover{opacity:1}
   </style>
 </head>
 
@@ -35,9 +55,9 @@
         <h1 id="exploreTitle">Explorer l’Ennéagramme</h1>
         <p id="exploreSubtitle">Histoire, concepts, niveaux 1–9, pratiques, repères</p>
 
-        <div class="heroCtas">
-          <a class="softCta" href="test-enneagramme-sans-indice.html">Faire le test</a>
-          <a class="softCta" href="index.html">Aller au diagramme</a>
+        <div class="heroActions">
+          <a class="heroBtn" href="test-enneagramme-sans-indice.html">Faire le test</a>
+          <a class="heroBtn" href="index.html">Aller au diagramme</a>
         </div>
       </div>
 
@@ -62,10 +82,12 @@
     </main>
 
     <footer class="siteFooter">
-      <div class="siteFooterInner">
-        <span>Brahms — Tous droits réservés</span>
-        <a class="siteFooterLink" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=dialog" target="_blank" rel="noopener">✉️ Écrire à Brahms</a>
-      </div>
+        <div class="footerInner">
+            <span class="copy">Brahms – Tous droits réservés</span>
+            <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf40aIE11fnKasayyVr117DZL5A3uZZBCwLdkQ/viewform?usp=sf_link" target="_blank">
+                ✉️ Écrire à Brahms
+            </a>
+        </div>
     </footer>
   </div>
 
