--- a/type.html
+++ b/type.html
@@ -13,6 +13,10 @@
     .siteFooterLink{color:#fff;text-decoration:none}
     .siteFooterLink:visited{color:#fff}
     .siteFooterLink:hover{text-decoration:underline}
+
+    /* Masquer le Sommaire et passer en 1 colonne */
+    .navPanel{display:none !important;}
+    .typeGrid{grid-template-columns:1fr !important;}
   </style>
 </head>
 <body>
