--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <footer class="siteFooter">
       <div class="footerInner">
         <span class="copy">Brahms – Tous droits réservés</span>
-        <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf40aIE11fnKasayyVr117DZL5A3uZZBCwLdkQ/viewform?usp=sf_link" target="_blank">
+        <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=header" target="_blank">
           ✉️ Écrire à Brahms
         </a>
       </div>
